@@ -1,15 +1,20 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM golang:1.22-alpine as builder
 
-FROM openjdk:8-jre-slim
+WORKDIR /app
+
+COPY go.mod go.mod
+# COPY go.sum go.sum
+
+RUN go mod download
+
+COPY . .
+
+RUN go build -o bin/app ./cmd/app
+
+FROM alpine
+
+COPY --from=builder /app/bin/app /app
 
 EXPOSE 8080
 
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
-
+CMD [ "/app" ]
